--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="assets/css/demo.css">
   <link rel="stylesheet" href="assets/css/github.css">
 
+  <link rel="import" href="sections/wine.html">
+
 </head>
 <body>
 
@@ -24,18 +26,18 @@
 
     <div class="nav-item u-category-windows">
       <button onclick="toggle(1)" type="button" class="region">Região 1</button>
-      <button type="button" id="button-windows" data-section="windows" class="maker 1">Produtor 1</button> 
-      <button type="button" id="button-windows" data-section="windows" class="maker 1">Produtor 2</button> 
+      <button type="button" id="button-windows" data-section="wine" class="maker 1">Produtor 1</button> 
+      <button type="button" id="button-windows" data-section="wine" class="maker 1">Produtor 2</button> 
       
       <button onclick="toggle(2)" type="button" class="region">Região 2</button>
-      <button type="button" id="button-windows" data-section="windows" class="maker 2">Produtor 3</button> 
+      <button type="button" id="button-windows" data-section="wine" class="maker 2">Produtor 3</button> 
       
       <button onclick="toggle(3)" type="button" class="region">Região 3</button>
-      <button type="button" id="button-windows" data-section="windows" class="maker 3">Produtor 4</button> 
-      <button type="button" id="button-windows" data-section="windows" class="maker 3">Produtor 5</button> 
-      <button type="button" id="button-windows" data-section="windows" class="maker 3">Produtor 6</button> 
-      <button type="button" id="button-windows" data-section="windows" class="maker 3">Produtor 7</button> 
-      <button type="button" id="button-windows" data-section="windows" class="maker 3">Produtor 8</button> 
+      <button type="button" id="button-windows" data-section="wine" class="maker 3">Produtor 4</button> 
+      <button type="button" id="button-windows" data-section="wine" class="maker 3">Produtor 5</button> 
+      <button type="button" id="button-windows" data-section="wine" class="maker 3">Produtor 6</button> 
+      <button type="button" id="button-windows" data-section="wine" class="maker 3">Produtor 7</button> 
+      <button type="button" id="button-windows" data-section="wine" class="maker 3">Produtor 8</button> 
     </div>
   </nav>
 
